# ar-scrapers

./: .gitignore  Cargo.toml  README.md
mc-scraper/: .env  Cargo.toml  animes.db-shm  animes.db-wal  design.txt  steps.txt
mc-scraper/migrations/: 20210122075005_create_animes.sql  20210122075009_create_genres.sql  20210122075020_create_episodes.sql  20210122075023_create_servers.sql  20210122075029_create_page_checksums.sql  20210125052703_create_episodes.sql  20210125052828_create_animes_genres.sql  20210125052924_create_servers.sql  20210125061933_create_on_air_animes.sql  20210125065606_create_page_checksums.sql  20210126013434_create_animes_urls.sql  20210126031727_create_episodes_urls.sql  20210126031942_create_episodes.sql
mc-scraper/migrations/2021-01-20-010658_create_animes/: down.sql  up.sql
mc-scraper/migrations/2021-01-20-010715_create_genres/: down.sql  up.sql
mc-scraper/migrations/2021-01-20-010719_create_animes_genres/: down.sql  up.sql
mc-scraper/migrations/2021-01-20-010722_create_episodes/: up.sql
mc-scraper/migrations/2021-01-20-014028_create_servers/: down.sql  up.sql
mc-scraper/migrations/2021-01-21-231834_create_browse_pages/: down.sql  up.sql
mc-scraper/migrations/2021-01-21-231843_create_anime_pages/: down.sql  up.sql
mc-scraper/migrations/2021-01-21-231850_create_episode_pages/: down.sql  up.sql
mc-scraper/src/: Session.vim  anime.rs  db.rs  downloader.rs  fetchers.rs  main.rs  models.rs  opts.rs  page_checksum.rs  pages.rs  schema.rs  scraper.rs
mc-scraper/src/models/: anime.rs  anime_url.rs  episode.rs  episode_url.rs  (+2 more)
(+3 files in other folders)
