[package]
name = "mc-scraper"
version = "0.0.1"
authors = ["Emilio González <emigr2k1@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.11.0"
tokio = { version = "1.0.2", features = ["full"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
scraper = "0.12.0"
voca_rs = "1.13.0"
dotenv = "0.15.0"
log = "0.4.13"
anyhow = "1.0.38"
url = "2.2.0"
futures = "0.3.12"
env_logger = "0.8.2"
clap = "3.0.0-beta.2"
